rest/ingress-nginx.yaml
#
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress
  namespace: default
  annotations:
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - <IP>
    secretName: echo-tls
  rules:
  - host: <IP>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rest
            port:
              number: 6000
